fixed centering of elements on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -287,7 +287,7 @@ body {
 @media only screen and (max-width: 500px) {
   .container .main-section .waw-section .content .button {
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 30px;
     font-size: 1.4rem;
     width: 80%;
     border-radius: 2px;
@@ -364,7 +364,7 @@ body {
 @media only screen and (max-width: 500px) {
   .container .main-section .future-section .content .button {
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 30px;
     margin-bottom: 20%;
     font-size: 1.4rem;
     width: 80%;
