--- a/less/Home/Home.less
+++ b/less/Home/Home.less
@@ -95,7 +95,8 @@
                     .button-creator(25%, 1.4rem);
                     @media @mobile {
                         margin-top: 20px;
-                        margin-left: 50px;
+                        margin-left: 30px;
+                        // margin-left: 50px;
                         .button-creator(80%, 1.4rem);
                     }
                 }
@@ -154,7 +155,8 @@
                     padding: 12px;
                     @media @mobile {
                         margin-top: 20px;
-                        margin-left: 50px;
+                        margin-left: 30px;
+                        // margin-left: 50px
                         margin-bottom: 20%;
                         .button-creator(80%, 1.4rem);
                     }
